[gd_scene load_steps=13 format=3 uid="uid://cw61ynutfaqay"]

[ext_resource type="Script" path="res://things/turret/turret.gd" id="1_uuw8o"]
[ext_resource type="Texture2D" uid="uid://b06xas31bmq16" path="res://art/tilemap-05.png" id="2_i41gq"]
[ext_resource type="Script" path="res://things/turret/HitboxComponent.gd" id="3_lc3mj"]
[ext_resource type="Script" path="res://things/turret/canno/AttackComponent.gd" id="4_0dhkl"]
[ext_resource type="PackedScene" uid="uid://dvxswhls63tpn" path="res://things/turret/projectile/bomb.tscn" id="5_l841u"]
[ext_resource type="Script" path="res://things/turret/HealthComponent.gd" id="6_bnjjq"]
[ext_resource type="Texture2D" uid="uid://crc53tkbwf1ye" path="res://art/Healthbar/HealthBack.png" id="7_bc5yj"]
[ext_resource type="Texture2D" uid="uid://dc6yx4e317edp" path="res://art/Healthbar/Healthover.png" id="8_nyn34"]
[ext_resource type="Texture2D" uid="uid://b16mvt6thnf05" path="res://art/Healthbar/HealthProcess.png" id="9_hi7sr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ibbat"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1h3pc"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vq8ds"]
radius = 268.007

[node name="turret" type="Node2D"]
script = ExtResource("1_uuw8o")
RQ_stone = 5

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_i41gq")
offset = Vector2(12, -9)
flip_h = true
region_enabled = true
region_rect = Rect2(64, 160, 64, 64)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_ibbat")

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("HealthComponent") groups=["turret"]]
script = ExtResource("3_lc3mj")
HealthComponent = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_1h3pc")

[node name="AttackComponent" type="Area2D" parent="."]
script = ExtResource("4_0dhkl")
bullet = ExtResource("5_l841u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackComponent"]
shape = SubResource("CircleShape2D_vq8ds")

[node name="fire_rate" type="Timer" parent="AttackComponent"]
autostart = true

[node name="Marker2D" type="Marker2D" parent="AttackComponent"]
position = Vector2(26, -8)

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("6_bnjjq")
MAX_HEALTH = 40.0

[node name="HealthBar" type="TextureProgressBar" parent="HealthComponent"]
offset_left = -21.0
offset_top = 19.0
offset_right = 882.0
offset_bottom = 154.0
scale = Vector2(0.05, 0.05)
max_value = 30.0
value = 30.0
texture_under = ExtResource("7_bc5yj")
texture_over = ExtResource("8_nyn34")
texture_progress = ExtResource("9_hi7sr")

[connection signal="body_exited" from="HitboxComponent" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="AttackComponent" to="AttackComponent" method="_on_body_entered"]
[connection signal="body_exited" from="AttackComponent" to="AttackComponent" method="_on_body_exited"]
[connection signal="timeout" from="AttackComponent/fire_rate" to="AttackComponent" method="_on_fire_rate_timeout"]
